--- a/composer.json
+++ b/composer.json
@@ -8,19 +8,19 @@
     ],
     "license": "MIT",
     "require": {
-        "php": "^7.1.3",
+        "php": ">=7.0.0",
         "encore/laravel-admin": "^1.8",
         "fideloper/proxy": "^4.0",
         "intervention/image": "^2.5",
         "laravel-admin-ext/chartjs": "^1.0",
         "laravel-admin-ext/grid-lightbox": "^1.0",
         "laravel-admin-ext/summernote": "^1.0",
-        "laravel/framework": "5.8.*",
+        "laravel/framework": "^5.8.0",
         "laravel/tinker": "^1.0",
-        "zhpefe/select-tree": "^1.2"
+        "zhpefe/select-tree": "^1.2",
+        "maatwebsite/excel": "~2.1.0"
     },
     "require-dev": {
-        "beyondcode/laravel-dump-server": "^1.0",
         "filp/whoops": "^2.0",
         "fzaninotto/faker": "^1.4",
         "mockery/mockery": "^1.0",
